[gd_scene load_steps=31 format=3 uid="uid://8t6rwn11k0g4"]

[ext_resource type="Texture2D" uid="uid://p01xts8mdbq5" path="res://assets/images/enemy/enemy.png" id="1_3fbd0"]
[ext_resource type="Shader" path="res://resources/shaders/enemy_inversion.gdshader" id="1_dumoj"]
[ext_resource type="Script" path="res://scenes/objects/enemy/enemy.gd" id="1_l82cd"]
[ext_resource type="AudioStream" uid="uid://dekugmf483xj3" path="res://assets/sounds/walk_echo.wav" id="2_adbat"]
[ext_resource type="Texture2D" uid="uid://xdv7s35s6f77" path="res://scenes/objects/enemy/enemy_inversion_tex.tres" id="2_smkct"]
[ext_resource type="AudioStream" uid="uid://c4bi7td7f4moa" path="res://assets/sounds/hell_scream.wav" id="2_tgu1f"]
[ext_resource type="AudioStream" uid="uid://b2jjqc2fyvfjh" path="res://assets/sounds/walk_instant.wav" id="3_2i5di"]
[ext_resource type="Texture2D" uid="uid://bqxk7ovbx7cke" path="res://assets/images/particles/enemy_parts.png" id="3_rdlh2"]
[ext_resource type="AudioStream" uid="uid://d3nq4ylpis2rb" path="res://assets/sounds/fast_steps.wav" id="4_i3h34"]
[ext_resource type="Script" path="res://scenes/components/hitbox/hitbox_component.gd" id="6_17bl2"]
[ext_resource type="AudioStream" uid="uid://cd1ps0fwbkbk4" path="res://assets/sounds/synth_blip.wav" id="6_ulao5"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_74qyi"]
random_pitch = 1.5
random_volume_offset_db = 1.0
streams_count = 3
stream_0/stream = ExtResource("2_adbat")
stream_1/stream = ExtResource("3_2i5di")
stream_2/stream = ExtResource("4_i3h34")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hvv42"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("2_tgu1f")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uyw4c"]
random_pitch = 1.5
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("6_ulao5")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l4y6c"]
shader = ExtResource("1_dumoj")
shader_parameter/shake_power = 0.02
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 0.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.006

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hgyxt"]
light_mode = 1
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_514yo"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.165775, 0.947883), 0.0, 0.0, 0, 0, Vector2(0.301693, 0), 2.00379, 2.00379, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_cxpm6"]
curve = SubResource("Curve_514yo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4ityb"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 60.0
direction = Vector3(1, 1, 0)
flatness = 1.0
angular_velocity_min = -60.0
angular_velocity_max = 60.0
radial_velocity_min = -80.0
radial_velocity_max = -1.00002
gravity = Vector3(0, 0, 0)
scale_max = 1.5
hue_variation_min = -2.23517e-08
hue_variation_max = 0.19
anim_speed_min = 1.0
anim_speed_max = 1.0
turbulence_influence_over_life = SubResource("CurveTexture_cxpm6")

[sub_resource type="Curve" id="Curve_a0n1c"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.165775, 0.947883), 0.0, 0.0, 0, 0, Vector2(0.301693, 0), 2.00379, 2.00379, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_nvjpe"]
curve = SubResource("Curve_a0n1c")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8bfuw"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(1, 1, 0)
spread = 180.0
flatness = 0.6
initial_velocity_min = 60.0
initial_velocity_max = 100.0
angular_velocity_min = -60.0
angular_velocity_max = 60.0
gravity = Vector3(0, 0, 0)
scale_max = 1.5
hue_variation_min = -2.23517e-08
hue_variation_max = 0.19
anim_speed_min = 1.0
anim_speed_max = 1.0
turbulence_influence_over_life = SubResource("CurveTexture_nvjpe")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6ly56"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_yi863"]
atlas = ExtResource("1_3fbd0")
region = Rect2(0, 0, 24, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_34wqh"]
atlas = ExtResource("1_3fbd0")
region = Rect2(24, 0, 24, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_d11f2"]
atlas = ExtResource("1_3fbd0")
region = Rect2(48, 0, 24, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpc2t"]
atlas = ExtResource("1_3fbd0")
region = Rect2(72, 0, 24, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_yfm7u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi863")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34wqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d11f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpc2t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsbsn"]
size = Vector2(14, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8heyx"]
size = Vector2(17, 28)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_l82cd")
hell_scream_time = Vector2(10, 20)
step_interval = 0.5
MovementSpeed = 50.0

[node name="step_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_74qyi")
max_distance = 350.0
bus = &"sfx"

[node name="hell_scream_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_hvv42")
max_distance = 350.0
bus = &"sfx"

[node name="particles_shot_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_uyw4c")
max_polyphony = 3
bus = &"sfx"

[node name="SpriteCenter" type="Marker2D" parent="."]
position = Vector2(0, -11)

[node name="InversionSprite" type="Sprite2D" parent="SpriteCenter"]
z_index = 100
material = SubResource("ShaderMaterial_l4y6c")
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_smkct")

[node name="PointLight2D" type="PointLight2D" parent="SpriteCenter"]
visible = false
texture = ExtResource("2_smkct")
texture_scale = 0.5

[node name="GPUParticles2D" type="GPUParticles2D" parent="SpriteCenter"]
material = SubResource("CanvasItemMaterial_hgyxt")
position = Vector2(1, -3)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_4ityb")
texture = ExtResource("3_rdlh2")
lifetime = 2.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
local_coords = true

[node name="Old" type="GPUParticles2D" parent="SpriteCenter"]
visible = false
material = SubResource("CanvasItemMaterial_hgyxt")
position = Vector2(1, -3)
amount = 30
process_material = SubResource("ParticleProcessMaterial_8bfuw")
texture = ExtResource("3_rdlh2")
lifetime = 2.0
explosiveness = 1.0
randomness = 1.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 80
material = SubResource("CanvasItemMaterial_6ly56")
sprite_frames = SubResource("SpriteFrames_yfm7u")
autoplay = "default"
frame = 1
frame_progress = 0.463849
offset = Vector2(0, -11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qsbsn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 256
script = ExtResource("6_17bl2")
health = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
z_index = 4096
position = Vector2(-0.5, -11)
shape = SubResource("RectangleShape2D_8heyx")
